--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,14 @@
 <resources>
-    <string name="app_name">NotificationServiceTest</string>
+    <string name="app_name">myAccount</string>
     <!-- AndroidManifest.xml -->
-    <string name="service_name">Service notification test</string>
+    <string name="service_name">我的账单</string>
     <!-- activity_main.xml -->
-    <string name="btn_request_access">REQUEST ACCESS</string>
+    <string name="btn_request_access">获取权限</string>
     <string name="btn_stop_service">STOP SERVICE</string>
-    <string name="btn_notification_test">NOTIFICATION TEST</string>
-    <string name="notification_access_denied">Notification Listener : permission denied</string>
-    <string name="notification_access_granted">Notification Listener : permission granted</string>
+    <string name="btn_notification_test">模拟通知</string>
+    <string name="notification_access_denied">权限未开通</string>
+    <string name="notification_access_granted">权限已开通</string>
     <!-- NotificationCreator.kt -->
-    <string name="notification_title">Notification title</string>
-    <string name="notification_message">Notification message</string>
+    <string name="notification_title">测试title</string>
+    <string name="notification_message">测试message</string>
 </resources>
