--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="btn_notification_test">模拟通知</string>
     <string name="notification_access_denied">权限未开通</string>
     <string name="notification_access_granted">权限已开通</string>
+    <string name="service_close">监听服务未打开</string>
+    <string name="service_open">监听服务已打开</string>
     <!-- NotificationCreator.kt -->
     <string name="notification_title">测试title</string>
     <string name="notification_message">测试message</string>
