--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="btn_request_access">获取权限</string>
     <string name="btn_stop_service">STOP SERVICE</string>
     <string name="btn_notification_test">模拟通知</string>
-    <string name="notification_access_denied">权限未开通</string>
-    <string name="notification_access_granted">权限已开通</string>
+    <string name="notification_access_denied">监听权限未开通</string>
+    <string name="notification_access_granted">监听权限已开通</string>
     <string name="service_close">监听服务未打开</string>
     <string name="service_open">监听服务已打开</string>
     <!-- NotificationCreator.kt -->
